turtleart.housetree.HouseTree.scala.error
Compilation error:
HouseTree:17: error: not found: value rigth
    rigth(90)
    ^